--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+server.port:8071
+spring.datasource.url=jdbc:mysql://localhost/db_oauth2?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=#H3r1666fash
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+logging.level.org.hibernate.SQL=debug
